[package]
name = "mime_more"
version = "0.1.0"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
mime = "0.3.17"
mime_guess = { version = "2.0.5", optional = true }
infer = { version = "0.16.0", optional = true }
anyhow = "1.0.86"

[features]
default = ['extension-light']
magic = ["infer"]
extension = ["mime_guess"]
extension-light = []
texture = []
