[package]
name = "mime_more"
description = "A library for better MIME function integrations."
license = "MIT"
version = "0.1.6"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
]
documentation = "https://docs.rs/mime_more/"
repository = "https://github.com/7086cmd/mime_more.git"

[dependencies]
mime = "0.3.17"
mime_guess = { version = "2.0.5", optional = true }
infer = { version = "0.16.0", optional = true }
anyhow = "1.0.86"
base64 = { version = "0.22.1", optional = true }
urlencoding = { version = "2.1.3", optional = true }
phf = { version = "0.11.2", features = ["macros", "phf_macros"] }

[dev-dependencies]
criterion = "0.5.1"

[features]
default = ['extension-light']
magic = ["infer"]
extension = ["mime_guess"]
extension-light = []
texture = []
dataurl = ["extension-light", "magic", "texture", "base64", "urlencoding"]

[[bench]]
name = "function_benchmark"
harness = false